controllers/nohup.out
Traceback (most recent call last):
  File "PeriodReport.py", line 89, in <module>
    events = epoll.poll(timeout)
IOError: [Errno 4] Interrupted system call
Traceback (most recent call last):
  File "PeriodReport.py", line 89, in <module>
    events = epoll.poll(timeout)
KeyboardInterrupt
Traceback (most recent call last):
  File "PeriodReport.py", line 107, in <module>
    if data:
IndexError: list index out of range
  File "PeriodReport.py", line 43
    else if len(l) > 11:
          ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "PeriodReport.py", line 124, in <module>
    exec(d[l[1]] + '()')
NameError: name 'd' is not defined
